# neurogen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
src/neurogen/: bindings.cc  encoder.h  encoder.py  info.py  mesh.py  neurogen_volume.py  volume.py
tests/: encoder_test.py
tests/test_data/: sphere.stl  sphere_faces.npy  sphere_vertices.npy
